--- a/Style.css
+++ b/Style.css
@@ -1,1 +1,13 @@
-/* No CSS *//*# sourceMappingURL=Style.css.map */
+@import url(https://fonts.google.com/specimen/Lexend+Deca);
+@import url(https://fonts.google.com/specimen/Big+Shoulders+Display);
+* {
+  padding: 0%;
+  margin: 0%;
+}
+
+:root {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: 16px;
+}
+/*# sourceMappingURL=Style.css.map */
