--- a/Style.scss
+++ b/Style.scss
@@ -79,6 +79,7 @@ body {
       font-size: 0.85rem;
       font-weight: 700;
       transition: all 100ms ease-in-out;
+      cursor: pointer;
     }
     .orange-button {
       color: $clr-Bright-orange;
